infra/longhorn/prod/longhorn-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: longhorn
    namespace: longhorn-system
spec:
    routes:
        - match: Host(`longhorn.investager.com`)
          kind: Rule
          middlewares:
              - name: longhorn-auth
                namespace: longhorn-system
          services:
              - name: longhorn-frontend
                namespace: longhorn-system
                port: 80
